--- a/src/app/post/dialog/dialog.component.html
+++ b/src/app/post/dialog/dialog.component.html
@@ -97,6 +97,20 @@
           <mat-label>Alias Name</mat-label>
           <input matInput formControlName="alias_name" readonly />
         </mat-form-field>
+        <mat-form-field class="example-form-field">
+          <mat-label>Clearable input</mat-label>
+          <input matInput type="text" [(ngModel)]="value" />
+          @if (value) {
+          <button
+            matSuffix
+            mat-icon-button
+            aria-label="Clear"
+            (click)="value = ''"
+          >
+            <mat-icon>close</mat-icon>
+          </button>
+          }
+        </mat-form-field>
       </div>
 
       <div
