--- a/src/app/post/view/view.component.html
+++ b/src/app/post/view/view.component.html
@@ -1,7 +1,7 @@
 <button
   mat-raised-button
   class="mt-3 ms-3"
-  (click)="(openDialog)"
+  (click)="openDialog()"
   routerLink="/view"
   [queryParams]="{ feedback: 1 }"
 >
